.xmonad/xmonad.errors

xmonad.hs:866:78: error:
    • Variable not in scope: xmproc1 :: GHC.IO.Handle.Types.Handle
    • Perhaps you meant ‘xmproc0’ (line 843)
    |
866 |                         { ppOutput = \x -> hPutStrLn xmproc0 x  >> hPutStrLn xmproc1 x  >> hPutStrLn xmproc2 x
    |                                                                              ^^^^^^^

xmonad.hs:866:102: error:
    • Variable not in scope: xmproc2 :: GHC.IO.Handle.Types.Handle
    • Perhaps you meant ‘xmproc0’ (line 843)
    |
866 |                         { ppOutput = \x -> hPutStrLn xmproc0 x  >> hPutStrLn xmproc1 x  >> hPutStrLn xmproc2 x
    |                                                                                                      ^^^^^^^
